--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.1.2</version>
 				<configuration>
-					<argLine>--enable-preview</argLine>
+					<argLine>--enable-preview  --add-modules jdk.incubator.vector</argLine>
 				</configuration>
 			</plugin>
 
